--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@ footer p{font-size:1em;opacity:0.9}
 
 <script>
 const contestantsData = [
-    { name: "Alice Johnson", username: "ALICE", bio: "Passionate about environmental causes.", image: "images/ALICE.jpg", votes: Math.floor(Math.random()*100)},
-    { name: "Clara Jones", username: "CLARA", bio: "Tech enthusiast and innovator.", image: "images/CLARA.JPG", votes: Math.floor(Math.random()*100)},
-    { name: "Emily Brown", username: "EMILY", bio: "Community leader and philanthropist.", image: "images/EMILY.jpg", votes: Math.floor(Math.random()*100)},
-    { name: "Diana Prince", username: "DIANA", bio: "Advocate for women's rights.", image: "images/DIANA.jpg", votes: Math.floor(Math.random()*100)},
-    { name: "Fiona Green", username: "FIONA", bio: "Artist and creative thinker.", image: "images/FIONA.jpg", votes: Math.floor(Math.random()*100)},
-    { name: "Grace Lee", username: "GRACE", bio: "Educator and mentor.", image: "images/GRACE.jpg", votes: Math.floor(Math.random()*100)}
+    { name: "Alice Johnson", username: "ALICE", bio: "Passionate about environmental causes.", image: "images/alice.jpg", votes: Math.floor(Math.random()*100)},
+    { name: "Clara Jones", username: "CLARA", bio: "Tech enthusiast and innovator.", image: "images/clara.jpg", votes: Math.floor(Math.random()*100)},
+    { name: "Emily Brown", username: "EMILY", bio: "Community leader and philanthropist.", image: "images/emily.jpg", votes: Math.floor(Math.random()*100)},
+    { name: "Diana Prince", username: "DIANA", bio: "Advocate for women's rights.", image: "images/diana.jpg", votes: Math.floor(Math.random()*100)},
+    { name: "Fiona Green", username: "FIONA", bio: "Artist and creative thinker.", image: "images/fiona.jpg", votes: Math.floor(Math.random()*100)},
+    { name: "Grace Lee", username: "GRACE", bio: "Educator and mentor.", image: "images/grace.jpg", votes: Math.floor(Math.random()*100)}
 ];
 
 let contestants = JSON.parse(localStorage.getItem('contestants')) || contestantsData;
